<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:visible="true"/>

    <item
        android:id="@+id/action_instructions"
        android:title="@string/action_instructions"
        android:icon="@drawable/info"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/info"
        android:orderInCategory="2"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_changelog"
        android:title="@string/action_changelog"
        android:orderInCategory="3"
        android:showAsAction="never" />




</menu>