<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Layers Manager"
        android:textColor="@color/titles"
        android:textSize="35sp"
        android:id="@+id/textView1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aboutTV3"
        android:textSize="15sp"
        android:id="@+id/textView4"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/aboutTV2"
        android:textSize="24sp"
        android:id="@+id/textView3"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/version"
        android:textSize="24sp"
        android:id="@+id/textView5"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="34dp"
        android:elevation="2sp"
        android:id="@+id/layersButton"
        android:text="@string/bitsykotext"
        android:drawableStart="@drawable/xda"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.91" />

    <Button
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:elevation="2sp"
        android:layout_marginTop="16dp"
        android:id="@+id/layersButton1"
        android:text="@string/bitsykotext"
        android:drawableStart="@drawable/bitsyko_g_plus"
        android:layout_gravity="center_horizontal"
        style="?android:attr/colorButtonNormal" />

</LinearLayout>

</ScrollView>