<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <!-- TITLE TEXT -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/changelogtitle"
        android:id="@+id/textView9"
        android:textColor="@color/titles"
        android:textSize="@dimen/title_text_size"
        android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="20sp"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changelog"
            android:textSize="15sp"
            android:id="@+id/textView10"
            android:layout_gravity="center_horizontal" />


    <ImageButton
        android:layout_width="96dp"
        android:layout_height="46dp"
        android:layout_margin="40dp"
        style="?android:attr/colorButtonNormal"
        android:elevation="2sp"
        android:id="@+id/xdaButton1"
        android:src="@drawable/xda"
        android:layout_gravity="center_horizontal" />





</LinearLayout>

</ScrollView>

