<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TITLE TEXT -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/homeTitle"
            android:id="@+id/textView9"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/titles"
            android:textSize="@dimen/title_text_size"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false" />

        <!-- HOME IMAGE -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/ic_home"
            android:layout_margin="20dp"
            android:layout_below="@+id/textView9"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/imageReference"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false" />

        <!-- LAYERS INSTALLER BUTTON -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:elevation="22sp"
            android:id="@+id/buttonlayers"
            style="@style/Button"
            android:text="@string/homebutton1txt"
            android:layout_below="@+id/imageView5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true" />

        <!-- LAYERS INSTALLER IMAGE -->

        <!-- LAYERS DOWNLOAD BUTTON -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:elevation="22sp"
            android:id="@+id/buttondllayers"
            style="@style/Button"
            android:text="@string/homebutton2txt"
            android:layout_below="@+id/buttonlayers"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/black" />

        <!-- LAYERS DOWNLOAD IMAGE -->


    </RelativeLayout>

</ScrollView>